---
title: 주문 & 결제 & 배송
---
erDiagram
    MEMBER ||--o{ SHIPPING_ADDRESS : "배송지 관리"
    MEMBER ||--o{ ORDERS : "주문"
    SHIPPING_ADDRESS ||--o{ ORDERS : "배송지 참조"
    ORDERS ||--|{ ORDER_ITEM : "포함"
    PRODUCT ||--o{ ORDER_ITEM : "주문됨"

    ORDERS ||--o| PAYMENT : "결제 1:1"
    MEMBER ||--o{ PAYMENT : "결제자"

    ORDERS ||--o| DELIVERY : "배송 1:1"
